Here goes nothing

--- a/data/authors/default.mdx
+++ b/data/authors/default.mdx
@@ -1,16 +1,15 @@
 ---
-name: Tails Azimuth
-avatar: /static/images/avatar.png
-occupation: Professor of Atmospheric Science
-company: Stanford University
-email: address@yoursite.com
-twitter: https://twitter.com/Twitter
-linkedin: https://www.linkedin.com
-github: https://github.com
+name: Tony Geiser
+avatar: /static/images/tony.png
+occupation: Professor of Interplanetary Affairs
+company: Sol Imperium War College
+email: tony@soldefensecorps.com
 ---
 
-Tails Azimuth is a professor of atmospheric sciences at the Stanford AI Lab. His research interests includes complexity modelling of tailwinds, headwinds and crosswinds.
+Tony is a husband, a father of two sons, and a Marine Corps veteran.
 
-He leads the clean energy group which develops 3D air pollution-climate models, writes differential equation solvers, and manufactures titanium plated air ballons. In his free time he bakes raspberry pi.
+He's served as a helicopter mechanic and an aerial observer in Sierra Leone, Liberia, the Central African Republic, Bosnia, Serbia, and other places.
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed neque elit, tristique placerat feugiat ac, facilisis vitae arcu. Proin eget egestas augue. Praesent ut sem nec arcu pellentesque aliquet. Duis dapibus diam vel metus tempus vulputate.
+He loves sci-fi of all kinds and his dog, Archie.
+
+We were winning when he left.
